<resources>
    <string name="app_name">TList</string>
    <string name="login">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="title_to_done">Lista de tareas</string>
    <string name="title_done_task">Completadas</string>
    <string name="label_create_task">Guardar</string>
    <string name="label_cancel">Cancelar</string>
    <string name="title_to_task">Nueva tarea</string>
    <string name="title_radio_button">Titulo</string>
    <string name="pattern_day">yyyy/MM/dd HH:mm:ss</string>
    <string name="empty_task">Debes escribir el título de una tarea</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="hint_mail">correo@electronico.com</string>
    <string name="hint_password">*************</string>
    <string name="register">Registrate</string>
    <string name="register_here">Regístrate aquí</string>
    <string name="error_void_fields">Debes ingresar todos los campos</string>
    <string name="register_done">Se ha registrado un nuevo usuario</string>
    <string name="error_register">Se produjo un error al registrar el usuario, inténtelo de nuevo</string>
    <string name="error_login">El correo y/o contraseña incorrectas, comprueba tu información</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="key_prefs">prefs_user</string>
    <string name="title_register">Registro de usuario</string>
    <string name="no_task">Añade una tarea</string>
    <string name="hint_task">Añade el título de una tarea</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>